# SmartCar

./: .gitignore  CMakeLists.txt  Car.cpp  Car.h  Command.h  Motor.cpp  Motor.h  Motor_L298N.cpp  Motor_L298N.h  SmartCar.ino  partitions.csv  sdkconfig  sdkconfig.old
components/ArduinoWebsockets/: CMakeLists.txt
components/ESP32-audioI2S/: CMakeLists.txt
components/IR/: CMakeLists.txt  IR.cpp  IR.h
components/ahtx0/: AHTX0.cpp  AHTX0.h  CMakeLists.txt
components/arduino-audio-tools/: CMakeLists.txt
components/audio_codecs/: CMakeLists.txt  audio_codec.cc  audio_codec.h  es8311_audio_codec.cc  es8388_audio_codec.cc
components/camera/: CMakeLists.txt  Camera.cpp  Camera.h  app_httpd.cpp  app_httpd_humanface.cpp  camera_pins.h
components/car/: CMakeLists.txt  Car.cpp  Car.h
components/common/: CMakeLists.txt  Command.h  Config.h  LichuangS3.h  StarkBoard.h
components/compass/: CMakeLists.txt  QMC5883LCompass.h
components/espressif__arduino-esp32/: CMakeLists.txt  idf_component.yml
components/fb_gfx/: CMakeLists.txt
components/filewebserver/: CMakeLists.txt  FileWebServer.cpp  FileWebServer.h
components/gyroscope/: CMakeLists.txt  QMI8658.cpp  QMI8658.h
components/hid/: Hid.h
components/ibeacon/: CMakeLists.txt
components/ioextend/: CMakeLists.txt  PCA9555.h  PCA9557.cpp  PCA9557.h  TCA6408.cpp  TCA6408.h
components/led/: CMakeLists.txt  Led.cpp  Led.h
components/max17043/: CMakeLists.txt  MAX17043.cpp  MAX17043.h
components/max1704x/: CMakeLists.txt  MAX1704X.cpp  MAX1704X.h
components/mic/: CMakeLists.txt  Es8311.cpp  Mic.cpp  Mic.h
components/sr/: Sr.cpp  (+2 more)
components/tft/: CMakeLists.txt  TFT_SPI.cpp  TFT_SPI.h
main/: Application.cpp  Application.h  CMakeLists.txt  DataChannel.cpp  DataChannel.h  idf_component.yml  main.cpp  upload_voice.c  upload_voice.h
(+36 files in other folders)
